utoipa-gen/tests/snapshots/path_derive__path_derive_with_body_ref_using_as_attribute_schema.snap
---
source: utoipa-gen/tests/path_derive.rs
expression: operation
snapshot_kind: text
---
{
  "operationId": "handler",
  "responses": {
    "200": {
      "content": {
        "application/json": {
          "schema": {
            "$ref": "#/components/schemas/types.calculation.calculation_assembly_cost.v1.CalculationAssemblyCostResponse"
          }
        }
      },
      "description": "Get calculated cost of an assembly."
    }
  }
}
