utoipa-gen/tests/snapshots/path_derive__path_nest_without_any_tags.snap
---
source: utoipa-gen/tests/path_derive.rs
expression: "&paths"
snapshot_kind: text
---
{
  "/api/nest/test": {
    "get": {
      "operationId": "test_path_nested",
      "responses": {},
      "tags": []
    }
  },
  "/test": {
    "get": {
      "operationId": "test_path",
      "responses": {},
      "tags": []
    }
  }
}
