utoipa-gen/tests/snapshots/path_derive__path_parameters_with_free_form_properties.snap
---
source: utoipa-gen/tests/path_derive.rs
expression: parameters
snapshot_kind: text
---
[
  {
    "in": "path",
    "name": "map",
    "required": true,
    "schema": {
      "additionalProperties": true,
      "type": "object"
    }
  }
]
